# SourceCodes

./: ANSArchitecture.drawio  Graham.cpp  HeapSort.h  fourier.cpp  olimpiadaXIXetap3zadaniePensje.cpp  olimpiadaXVetap1zadaniePlakatowanie.cpp
kruskal/: CMakeLists.txt  Edge.h  Graph.h  Node.h  UnionFind.h  main.cpp
